<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TokenlessAuthenticationActivity!</string>
    <string name="app_name">TokenlessAuthentication</string>
    <string name="sign_in">Sign In</string>
    <string name="init_reg">Initial Registration</string>
    <string name="init_passw">Initial Password</string>
    <string name="register">Register</string>
    <string name="write">Write File</string>
    <string name="read">Read File</string>
    <string name="login">Login</string>
    <string name="pin">PIN</string>
    <string name="clear_debug">Clear!</string>
    <string name="ip_server">IP</string>
    <string name="prefs">Settings</string>
    <string name="prefs_connect">Connection</string>
    <string name="pref_connect_host">Host</string>
    <string name="pref_connect_port">Port</string>
    <string name="server_host">server_host</string>
    <string name="server_port">server_port</string>
    <string name="offline_mode">Offline mode</string>
    <string name="account">Account</string>
    <string name="balance">Balance</string>
    <string name="refresh">Refresh</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="exit">Exit</string>
</resources>
