<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<!--    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/account" 
            android:layout_weight="1"/>
        
        <EditText android:id="@+id/account" 
          android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="4"/>
    </LinearLayout> -->
        
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/balance" 
            android:layout_weight="1"/>
        
        <EditText android:id="@+id/balance" 
          android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="3"/>

        <Button android:id="@+id/getBalance" 
            android:text="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

<!--     <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/source" 
            android:layout_weight="1"/>
        
        <EditText android:id="@+id/source" 
          android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="4"/>
    </LinearLayout> -->

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/destination" 
            android:layout_weight="1"/>
        
        <EditText android:id="@+id/destination" 
          android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/amount" 
            android:layout_weight="1"/>
        
        <EditText android:id="@+id/amount" 
          android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="4"/>
    </LinearLayout>

    <Button android:id="@+id/transfer" 
        android:text="@string/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button android:id="@+id/exit" 
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>